@@ -981,8 +981,8 @@ class Warning_(ModelSQL, ModelView):
             ])
         if not warnings:
             return True
-        transaction.check_warnings.add(key)
-        cls.delete([x for x in warnings if not x.always])
+        transaction.check_warnings[key].update(
+            w.id for w in warnings if not w.always)
         return False
 
 
